--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <div class="container">
-    <h1><span class="min">0</span>:<span id="sec">0</span>:<span id="mils">0</span></h1>
+    <h1 class="display-1"><span class="min">0</span>:<span id="sec">0</span>:<span id="mils">0</span></h1>
 
-    <button id="start" class="btn btn-primary">start</button>
-    <button id="stop" style="display: none;" class="btn btn-danger">stop</button>
-    <button id="prog" class="btn btn-success">progress</button>
+    <button id="start" class="btn btn-primary">Start</button>
+    <button id="stop" style="display: none;" class="btn btn-danger">Stop</button>
+    <button id="lap" class="btn btn-info">Lap</button>
 <hr>
     <ol id="progress"></ol>
 </div>
