--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <style>
-        *{
-            font-family: 'sofia pro';
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="container">
-    <h1 class="display-1"><span class="min">0</span>:<span id="sec">0</span>:<span id="mils">0</span></h1>
 
-    <button id="start" class="btn btn-primary">Start</button>
-    <button id="stop" style="display: none;" class="btn btn-danger">Stop</button>
-    <button id="lap" class="btn btn-info">Lap</button>
-<hr>
-    <ol id="progress"></ol>
-</div>
+<body class="bg-light">
+    <div class="container">
+        <h1 class="display-1"><span class="min">0</span>:<span id="sec">0</span>:<span id="mils">0</span></h1>
+
+        <button id="start" class="btn btn-primary">Start</button>
+        <button id="stop" style="display: none;" class="btn btn-danger">Stop</button>
+        <button id="lap" class="btn btn-info">Lap</button>
+        <hr>
+        <ol id="progress"></ol>
+    </div>
+    <div class="darkmode">
+        <button class="btn btn-outline-light fas fa-moon" id="darkMode"></button>
+    </div>
     <script src="app.js"></script>
 </body>
+
 </html>
