--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body class="bg-light">
     <div class="container">
+
         <h1 class="display-1"><span class="min">0</span>:<span id="sec">0</span>:<span id="mils">0</span></h1>
 
         <button id="start" class="btn btn-primary">Start</button>
@@ -23,7 +24,8 @@
         <hr>
         <ol id="progress"></ol>
     </div>
-    <div class="darkmode">
+    <div class="darkmode d-flex justify-content-between">
+        <h1 class="text-light lead">Stopwatch</h1>
         <button class="btn btn-outline-light fas fa-moon" id="darkMode"></button>
     </div>
     <script src="app.js"></script>
