--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <ol id="progress"></ol>
     </div>
     <div class="darkmode d-flex justify-content-between">
-        <h1 class="text-light lead">Stopwatch</h1>
+        <div>
+            <h1 class="text-light fs-4">Stopwatch</h1>
+            <p class="text-light develop">Developed by Behruz Usmonov</p>
+        </div>
         <button class="btn btn-outline-light fas fa-moon" id="darkMode"></button>
     </div>
     <script src="app.js"></script>
