some bugs fixed

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button id="start" class="btn btn-primary">Start</button>
         <button id="stop" style="display: none;" class="btn btn-danger">Stop</button>
         <button id="lap" class="btn btn-info">Lap</button>
+        <button class="btn btn-warning" id="reset">Reset</button>
         <hr>
         <ol id="progress"></ol>
     </div>
