--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg-light">
     <div class="container">
 
-        <h1 class="display-1"><span class="min">0</span>:<span id="sec">0</span>:<span id="mils">0</span></h1>
+        <h1 class="display-1"><span id="min">0</span>:<span id="sec">0</span>:<span id="mils">0</span></h1>
         <div class="d-flex justify-content-between">
         <div>
             <button id="start" class="btn btn-primary">Start</button>
